--- a/styles/style.css
+++ b/styles/style.css
@@ -82,10 +82,11 @@ body {
 .navigation-user {
   max-width: 300px;
   margin-left: auto;
+  justify-content: flex-end;
 }
 
 .navigation-item {
-  padding: 20px 16px;
+  padding: 19px 16px;
 }
 
 .navigation-link {
@@ -94,6 +95,60 @@ body {
   line-height: 24px;
   color: #000000;
   text-decoration: none;
+}
+
+.navigation-link-search {
+  display: block;
+  width: 44px;
+  height: 64px;
+  background: url("../images/search.svg") no-repeat center center;
+  margin-right: 13px;
+}
+
+.navigation-link-like {
+  display: block;
+  width: 18px;
+  height: 17px;
+  background: url("../images/like.svg") no-repeat center center;
+  margin-right: 32px;
+  margin-top: 24px;
+}
+
+.likes-number {
+  display: inline-block;
+  box-sizing: border-box;
+  color: #ffffff;
+  background-color: #7db54f;
+  text-decoration: none;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 10px;
+  text-align: center;
+  border-radius: 10px;
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  padding: 5px;
+}
+
+.navigation-link-button {
+  display: inline-block;
+  box-sizing: border-box;
+  padding: 8px 34px;
+  min-width: 160px;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 700;
+  color: #ffffff;
+  background-color: #756157;
+  text-decoration: none;
+  text-align: center;
+  border-radius: 4px;
+  text-transform: uppercase;
+}
+
+.user-item-wish {
+  padding-top: 15px;
 }
 
 .main-index {
@@ -157,16 +212,16 @@ body {
 
 .advantages-container {
   width: 400px;
-  min-height: 371px;
-  padding-top: 97px;
-  padding-bottom: 35px;
+  min-height: 360px;
+  padding-top: 103px;
+  padding-bottom: 118px;
   box-sizing: border-box;
 }
 
 .advantages-item--special .advantages-container {
   padding-top: 92px;
+  padding-bottom: 100px;
 }
-
 
 .advantages-item--special {
   color: #ffffff;
@@ -196,6 +251,7 @@ body {
 .advantages-img {
   width: auto;
   height: 100%;
+  display: block;
 }
 
 .advantages-description {
@@ -230,7 +286,7 @@ body {
   width: 230px;
   margin: 0 auto;
   padding-top: 86px;
-  padding-bottom: 27px;
+  padding-bottom: 30px;
   font-weight: 700;
   font-size: 24px;
   line-height: 28px;
@@ -238,7 +294,7 @@ body {
 }
 
 .hint-description {
-  width: 172px;
+  width: 247px;
   margin: 0 auto;
   font-weight: 400;
   font-size: 18px;
@@ -301,7 +357,7 @@ body {
   text-align: center;
   width: 1200px;
   padding-top: 50px;
-  padding-bottom: 73px;
+  padding-bottom: 71px;
   background-repeat: no-repeat;
   background-color: #333333;
   background-position: center top;
@@ -335,7 +391,7 @@ body {
   align-items: center;
   padding: 0;
   margin: 0;
-
+  margin-bottom: 31px;
 }
 
 .newsletter-field {
@@ -367,13 +423,41 @@ body {
 
 .contacts {
   display: flex;
+}
+
+.contacts-list {
+  display: flex;
+  width: 118px;
+  flex-wrap: wrap;
+  list-style: none;
   justify-content: space-between;
+  margin: 0;
+  padding: 0;
+  margin-top: 54px;
+  margin-left: 81px;
+  margin-bottom: 50px;
+  margin-right: 249px;
 }
 
 .contacts-address-phone {
+  display: block;
+  flex-wrap: wrap;
+  width: 350px;
   font-weight: 400;
   font-size: 40px;
   line-height: 40px;
+  text-decoration: none;
+  color: #000000;
+  margin-top: 46px;
+  margin-right: 217px;
+  margin-bottom: 50px;
+}
+
+.footer-logo-link {
+  display: block;
+  margin-top: 49px;
+  margin-bottom: 50px;
+  margin-right: 28px;
 }
 
 .main-inner {
@@ -382,7 +466,7 @@ body {
 
 .inner-container {
   width: 1200px;
-  padding-bottom: 83px;
+  padding-bottom: 36px;
   background-image: url("../images/inner-background.jpg");
   background-color: #333333;
   background-size: cover;
@@ -395,6 +479,12 @@ body {
   font-size: 60px;
   line-height: 78px;
   color: #ffffff;
+  margin: 0;
+  padding: 0;
+  display: block;
+  padding-left: 71px;
+  padding-top: 34px;
+  padding-bottom: 9px;
 }
 
 .breadcrumbs {
@@ -404,6 +494,36 @@ body {
   font-size: 16px;
   line-height: 21px;
   color: #ffffff;
+  margin: 0;
+  padding: 0;
+  margin-left: 70px;
+}
+
+.breadcrumbs-link-home {
+  display: block;
+  width: 12px;
+  height: 16px;
+  background: url("../images/home.svg") no-repeat center center;
+}
+
+.breadcrumbs-icon {
+  display: block;
+  width: 12px;
+  height: 18px;
+  background: url("../images/breadcrumbs-icon.svg") no-repeat center center;
+  margin: 0;
+  padding: 0;
+  margin-left: 9px;
+}
+
+.breadcrumbs-link-hotels {
+  display: block;
+  margin: 0;
+  padding: 0;
+  margin-left: 9px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 21px;
 }
 
 .catalog-filter-form {
@@ -414,66 +534,433 @@ body {
   color: #ffffff;
 }
 
-.catalog-nav {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  margin: 25px 70px 16px 70px;
+.catalog-filter-group {
+  margin: 0;
+  padding: 0;
+  margin-top: 40px;
+  margin-left: 68px;
+  border: none;
 }
 
-.catalog--nav-title {
+.catalog-filter-title {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
+  text-transform: capitalize;
+  color: #ffffff;
+}
+
+.catalog-filter-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  padding-top: 32px;
+}
+
+.catalog-filter-item {
+  margin-bottom: 16px;
+}
+
+.control {
+  position: relative;
+  display: block;
+  padding-left: 38px;
+}
+
+.control-mark {
+  position: absolute;
+  top: 1px;
+  left: 1px;
+  width: 20px;
+  height: 20px;
+  border-radius: 4px;
+  background-color: #ffffff;
+}
+
+.control-input[type="checkbox"]:checked + .control-mark::before {
+  position: absolute;
+  top: 12px;
+  left: 5px;
+  width: 6px;
+  height: 2px;
+  background-color: #242424;
+  content: "";
+}
+
+.control-input[type="checkbox"]:checked + .control-mark::before {
+  transform: rotate(45deg);
+}
+
+.control-input[type="checkbox"]:checked + .control-mark::after {
+  position: absolute;
+  top: 10px;
+  left: 8px;
+  width: 10px;
+  height: 2px;
+  background-color: #3f5e72;
+  content: "";
+}
+
+.control-input[type="checkbox"]:checked + .control-mark::after {
+  transform: rotate(-48deg);
+}
+
+.control-input[type="radio"] + .control-mark {
+  border-radius: 50%;
+}
+
+.control-input[type="radio"]:checked + .control-mark::before {
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  width: 10px;
+  height: 10px;
+  background-color: #3f5e72;
+  border-radius: 50%;
+  content: "";
+}
+
+.control-label {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 23px;
+  color: #ffffff;
+}
+
+.catalog-filter-group.catalog-filter-group-range {
+  margin-left: 148px;
+}
+
+.range-wrapper {
+  display: flex;
+}
+
+.range-scale {
+  position: relative;
+  height: 4px;
+  margin-top: 78px;
+  background-color: rgb(255, 255, 255, 0.3);
+}
+
+.range-bar {
+  position: absolute;
+  height: 4px;
+  background-color: #ffffff;
+}
+
+.range-toggle {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  background: #ffffff;
+  border-radius: 20%;
+  border: none;
+}
+
+.toggle-min {
+  top: -8px;
+  left: 3px;
+}
+
+.toggle-max {
+  top: -8px;
+  right: -3px;
+}
+
+.catalog-filter-group-button {
+  display: flex;
+  flex-direction: column;
+  border: none;
+  margin: 0;
+  padding: 0;
+  margin-top: 48px;
+  margin-left: 102px;
+}
+
+.button-on {
+  display: inline-block;
+  box-sizing: border-box;
+  margin: 0;
+  margin-top: 48px;
+  margin-left: 102px;
+  margin-bottom: 34px;
+  padding: 8px 51px;
+  min-width: 160px;
+  font-family: 'PT Sans';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  color: #ffffff;
+  background-color: #82B3D3;
+  text-decoration: none;
+  text-align: center;
+  border-radius: 4px;
+  text-transform: uppercase;
+}
+
+.button-off {
+  display: inline-block;
+  box-sizing: border-box;
+  min-width: 160px;
+  font-family: 'PT Sans';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  color: #ffffff;
+  text-decoration: none;
+  text-align: center;
+  border-radius: 4px;
+  text-transform: uppercase;
+}
+
+.catalog-nav-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 49px;
+  margin-left: 71px;
+  margin-right: 65px;
+  margin-bottom: 39px;
+}
+
+.catalog-nav-title {
+  display: block;
+  margin: 0;
+  padding: 0;
   font-weight: 700;
   font-size: 30px;
   line-height: 36px;
   text-transform: uppercase;
 }
 
-.product-card-list {
+.select {
+  position: relative;
+  display: flex;
+  align-items: center;
+  width: 291px;
+  margin-left: 200px;
+  margin-right: auto;
+}
+
+.select-control {
+  width: 100%;
+  padding: 12px 18px;
+  padding-right: 48px;
+  text-align: left;
+  font-family: 'PT Sans';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21px;
+  border: 2px solid #E5E5E5;
+  border-radius: 4px;
+  background-image: url("../images/select-arrow.svg");
+  background-repeat: no-repeat;
+  background-position: right 17px center;
+  appearance: none;
+}
+
+.catalog-nav-button-container {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-around;
+  width: 169px;
+  margin: 0;
+  padding: 0;
+}
+
+.catalog-nav-button {
+  display: block;
+  width: 43px;
+  height: 43px;
+  border: 2px solid #E5E5E5;
+  border-radius: 4px;
+}
+
+.catalog-nav-button.button-light {
+  border: 2px solid #000000;
+  border-radius: 4px;
+}
+
+.button-icon {
+  display: block;
+  margin: 0 auto;
+  margin-top: 15px;
+}
+
+.product-card-list {
+  display: flex;
+  width: 1200px;
+  flex-wrap: wrap;
   list-style: none;
-  margin-left: 30px;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 62px;
+  margin-left: 70px;
+  margin-right: 70px;
 }
 
 .product-card {
   width: 340px;
-  border: 1px solid #333333;
-
-}
-.pagination {
-  display: flex;
-  list-style: none;
+  margin-bottom: 18px;
+  margin-right: 18px;
+  border: 1px solid #E6E6E6;
+  border-radius: 4px;
 }
 
 .product-card-link {
   text-decoration: none;
 }
 
+.product-card-image {
+  display: block;
+  margin: 0;
+  padding: 0;
+  padding-top: 20px;
+  padding-left: 19px;
+}
+
 .product-card-title {
+  display: block;
+  margin: 0;
+  padding: 0;
+  padding-top: 18px;
+  padding-left: 20px;
   font-weight: 700;
   font-size: 24px;
   line-height: 28px;
   color: #000000;
-  margin: 0;
-  padding-top: 19px;
-  padding-left: 19px;
+}
+
+.product-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  row-gap: 13px;
+  column-gap: 20px;
+  margin-top: 14px;
+  margin-left: 19px;
+  margin-bottom: 19px;
+  margin-right: 19px;
 }
 
 .product-card-discription {
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 21px;
-  color: #333333;
+  display: block;
   margin: 0;
   padding: 0;
 }
 
-.product-card-image {
+.product-card-price {
   display: block;
-  width: 300px;
-  margin: 0 auto;
+  padding-left: 60px;
+}
+
+.product-card-rating {
+  display: block;
+  margin: 0;
+  padding: 0;
+}
+
+.product-card-button {
+  display: inline-block;
+  box-sizing: border-box;
+  padding: 8px 3px;
+  font-size: 16px;
+  min-width: 138px;
+  line-height: 20px;
+  font-weight: 700;
+  color: #ffffff;
+  background-color: #756157;
+  text-decoration: none;
+  text-align: center;
+  border-radius: 4px;
+  text-transform: uppercase;
+}
+
+.product-card-button--blue {
+  background-color: #82b3d3;
+}
+
+.product-card-button--green {
+  background-color: #7db54f;
+}
+
+.stars {
+  display: block;
+  margin: 0;
+  padding: 0;
+}
+
+.product-card-rating {
+  display: inline-block;
+  box-sizing: border-box;
+  margin-top: 3px;
+  margin-right: 2px;
+  padding: 9px 3px;
+  min-width: 138px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  color: #000000;
+  background-color: #F2F2F2;
+  text-decoration: none;
+  text-align: center;
+  border-radius: 4px;
+  text-transform: uppercase;
+}
+
+.pagination {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  margin-left: 70px;
+  margin-top: 20px;
+  margin-bottom: 60px;
+  margin-right: 730px;
+}
+
+.pagination-item {
+  margin-right: 8px;
+}
+
+.pagination-link {
+  display: block;
+  box-sizing: border-box;
+  width: 60px;
+  height: 60px;
+  padding: 14px 20px;
+  font-size: 20px;
+  line-height: 36px;
+  font-weight: 700;
+  color: #ffffff;
+  background-color: #82b3d3;
+  text-decoration: none;
+  text-align: center;
+  padding-top: 12px;
+  border-radius: 4px;
+}
+
+.pagination-current {
+  background-color: #f2f2f2;
+  color: #000000;
+}
+
+.pagination-clear {
+  background-color: transparent;
+  color: #000000;
+  font-size: 22px;
+  line-height: 26px;
+  font-weight: 400;
   padding-top: 17px;
-  padding-left: 10px;
-  padding-right: 10px;
+}
+
+.catalog-newsletter {
+  background: none;
+  text-align: center;
+}
+
+.catalog-newsletter-title {
+  color: #000000;
 }
