--- a/styles/style.css
+++ b/styles/style.css
@@ -1020,7 +1020,7 @@ input:focus {
 }
 
 .button-on:disabled {
-  color:rgba(255, 255, 255, 0.1);
+  color: rgba(255, 255, 255, 0.1);
 }
 
 .catalog-nav {
@@ -1275,26 +1275,26 @@ input:focus {
 
 .star-one {
   background: url("../images/star.svg") space 0 0;
-    width: 18px;
-    height: 17px;
+  width: 18px;
+  height: 17px;
 }
 
 .star-two {
   background: url("../images/star.svg") space 0 0;
-    width: 42px;
-    height: 17px;
+  width: 42px;
+  height: 17px;
 }
 
 .star-three {
   background: url("../images/star.svg") space 0 0;
-    width: 66px;
-    height: 17px;
+  width: 66px;
+  height: 17px;
 }
 
 .star-four {
   background: url("../images/star.svg") space 0 0;
-    width: 89px;
-    height: 17px;
+  width: 89px;
+  height: 17px;
 }
 
 .product-card-rating {
@@ -1385,4 +1385,231 @@ input:focus {
 
 .catalog-newsletter-field {
   background: #F2F2F2;
+}
+
+.modal-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background: rgba(242, 242, 242, 0.8);
+}
+
+.modal {
+  position: relative;
+  width: 648px;
+  margin: auto;
+  padding-top: 64px;
+  padding-left: 69px;
+  padding-bottom: 64px;
+  background-color: #ffffff;
+  border-radius: 30px;
+}
+
+.modal-close-button {
+  position: absolute;
+  padding: 0;
+  top: 63px;
+  right: 52px;
+  width: 52px;
+  height: 52px;
+  background-color: #F2F2F2;
+  border: none;
+  border-radius: 50px;
+  background-image: url("../images/close.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  cursor: pointer;
+}
+
+.modal-title {
+  display: block;
+  width: 413px;
+  margin: 0;
+  padding: 0;
+  font-family: 'PT Sans';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 36px;
+  text-transform: uppercase;
+  color: #000000;
+}
+
+.booking-form-check-in {
+  width: 622px;
+  display: block;
+  margin: 0;
+  padding: 0;
+  margin-top: 64px;
+}
+
+.form-label {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
+}
+
+.form-label-check-in {
+  margin-right: 20px;
+}
+
+.booking-form-field {
+  text-align: left;
+  font-family: 'PT Sans';
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 24px;
+  color: #000000;
+  width: 400px;
+  padding-top: 13px;
+  padding-bottom: 12px;
+  padding-left: 21px;
+  padding-right: 20px;
+  border-radius: 4px;
+  border: none;
+  background-color: #F2F2F2;
+  background-image: url("../images/calendar.svg");
+  background-repeat: no-repeat;
+  background-position: 403px 15px;
+}
+
+.booking-form-field::placeholder {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 24px;
+  color: #000000;
+}
+
+.error {
+  display: block;
+  margin: 0;
+  padding: 0;
+  width: 400px;
+  margin-left: 157px;
+  margin-top: 3px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 21px;
+  color: #FF5757;
+  align-items: center;
+}
+
+.booking-form-departure {
+  width: 622px;
+  display: block;
+  margin: 0;
+  padding: 0;
+  margin-top: 22px;
+}
+
+.form-label-departure {
+  margin-right: 14px;
+}
+
+.agreed {
+  display: block;
+  margin: 0;
+  padding: 0;
+  width: 400px;
+  margin-left: 157px;
+  margin-top: 3px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 21px;
+  color: #000000;
+  align-items: center;
+}
+
+.form-container {
+  display: grid;
+  grid-template-columns: 300px 300px;
+
+}
+
+.booking-form-adult-number {
+  display: block;
+  margin: 0;
+  padding: 0;
+  padding-top: 23px;
+}
+
+.form-label-adult-number {
+  margin-right: 43px;
+}
+
+.number-field {
+  width: 55px;
+  padding-top: 13px;
+  padding-bottom: 12px;
+  padding-left: 27px;
+  padding-right: 27px;
+  border-radius: 4px;
+  text-align: center;
+  border: none;
+  background: #F2F2F2;
+  background-image: url("../images/minus.svg"), url("../images/plus.svg");
+  background-repeat: no-repeat;
+  background-position: 12px 24px, 84px 19px;
+}
+
+.booking-form-children-number {
+  display: block;
+  margin: 0;
+  padding: 0;
+  padding-top: 23px;
+}
+
+.form-label-children-number {
+  padding-left: 35px;
+  padding-right: 80px;
+  background-image: url("../images/info.svg");
+  background-repeat: no-repeat;
+  background-position: 95px 0;
+}
+
+.booking-form-button {
+  display: inline-block;
+  word-wrap: break-word;
+  width: 577px;
+  font-family: 'PT Sans';
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 36px;
+  color: #FFFFFF;
+  background-color: #82B3D3;
+  text-transform: uppercase;
+  padding: 11px 37px;
+  border: none;
+  border-radius: 9px;
+  margin-top: 47px;
+}
+
+.info {
+  display: block;
+  width: 214px;
+  height: 105px;
+  bottom: 23px;
+  right: 113px;
+  position: absolute;
+  padding: 0;
+  margin: 0;
+  padding-left: 22px;
+  padding-top: 19px;
+  padding-right: 18px;
+  padding-bottom: 18px;
+  color: #ffffff;
+  background-color: #F2F2F2;
+  border: none;
+  border-radius: 8px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  background: #333333;
+  box-shadow: 0 15px 30px rgb(0 0 0 / 30%);
+  background-image: url("../images/triangle-2.svg");
+  background-repeat: no-repeat;
+  background-position: 95px 0;
 }
