--- a/styles/style.css
+++ b/styles/style.css
@@ -1200,14 +1200,18 @@ input:focus {
   padding: 0;
   padding-top: 20px;
   padding-left: 19px;
+  padding-right: 19px;
 }
 
 .product-card-title {
   display: block;
+  width: 300px;
   margin: 0;
   padding: 0;
   padding-top: 18px;
   padding-left: 20px;
+  padding-right: 18px;
+  padding-bottom: 2px;
   font-weight: 700;
   font-size: 24px;
   line-height: 28px;
@@ -1220,7 +1224,7 @@ input:focus {
   row-gap: 13px;
   column-gap: 20px;
   align-items: start;
-  margin-top: 14px;
+  margin-top: 12px;
   margin-left: 19px;
   margin-bottom: 19px;
   margin-right: 19px;
